--- a/style.css
+++ b/style.css
@@ -102,10 +102,6 @@ nav {
 }
 
 /* MAIN APP SCREEN  */
-.app-screen {
-  transition: all 1s;
-}
-
 .balance__label {
   font-size: 2.2rem;
   font-weight: 500;
@@ -187,6 +183,8 @@ nav {
   align-items: baseline;
   padding: 0 0.3rem;
   margin-top: 1rem;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .summary__label {
@@ -329,4 +327,92 @@ footer {
 
 .create-account:hover {
   color: #4c4b63 !important;
+}
+
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.hidden {
+  display: none;
+}
+
+.err-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40%;
+  background-color: white;
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.err-modal p {
+  font-size: 1.5rem;
+}
+
+.err-modal h2 {
+  font-size: 2.2rem;
+}
+
+.err-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
+
+@media screen and (max-width: 768px) {
+  .app-container {
+    /*height: auto !important;*/
+    padding: 30px 0px;
+    width: 100% !important;
+  }
+
+  .login-screen {
+    width: 99% !important;
+  }
+
+  .login-box {
+    width: 95% !important;
+  }
+
+  .app-screen {
+    width: 100%;
+  }
+
+  .movements__row {
+    padding: 2.25rem 2rem;
+  }
+
+  .balance__label {
+    font-size: 1.5rem;
+  }
+
+  .balance__value {
+    font-size: 3.2rem;
+  }
+
+  .balance__date {
+    font-size: 1.3rem;
+  }
+
+  .welcome,
+  .logout {
+    font-size: 1.5rem;
+  }
 }
