--- a/style.css
+++ b/style.css
@@ -345,7 +345,7 @@ footer {
 }
 
 .err-modal {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
